[package]
name = "tonicengine"
version = "0.1.0"
authors = ["dru <dru@gamebreakingstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.23.0"
vulkano-shaders = "0.23.0"
#image = "0.23.14"
vulkano-win = "0.23.0"
winit = "0.24.0"